<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="author">© Elka</string>
    <string name="main_screen_title">Game Settings</string>
    <string name="board_size">Board Size</string>
    <string name="with_robot">With Robot</string>
    <string name="with_friend">With Friend</string>
    <string name="quit">Quit</string>
    <string name="player_0">Player 0</string>
    <string name="player_x">Player X</string>
    <string name="bg">Bg</string>
    <string name="decrement_board_size">Decrement board size</string>
    <string name="increment_board_size">Increment board size</string>
    <string name="friend">Friend</string>
    <string name="robot">Robot</string>
    <string name="current_player">Player %s</string>
    <string name="player">Player</string>
    <string name="won_this_game">won this game</string>
    <string name="win">Yepii...Player %s win</string>
    <string name="isDraw">Draw game</string>
</resources>