<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_with_x_o" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_padding_horiz"
            android:layout_marginVertical="@dimen/add_padding_ver"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_screen_title" />


            <TextView
                style="@style/semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/board_size_mt"
                android:layout_marginBottom="@dimen/board_size_mb"
                android:text="@string/board_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/board_size_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arr_back" />

                <TextView
                    android:id="@+id/board_size_value"
                    style="@style/semi_bold"
                    tools:text="3"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/board_size_pls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arr_next" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/btns_mt"
                style="@style/btn">

                <ImageView
                    android:src="@drawable/ic_robot"
                    style="@style/btn_image" />

                <TextView
                    style="@style/semi_bold"
                    android:text="@string/with_robot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/btns_mt"
                style="@style/btn">



                <TextView
                    style="@style/semi_bold"
                    android:text="@string/with_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@drawable/ic_friend"
                    style="@style/btn_image" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>