<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_padding_horiz"
            android:layout_marginVertical="@dimen/add_padding_ver"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_state"
                style="@style/medium_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Player X" />

            <View
                android:layout_width="@dimen/game_board_size"
                android:layout_height="@dimen/game_board_size"
                android:layout_marginVertical="@dimen/game_board_margin"
                android:background="#2663DD" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginEnd="@dimen/player_state_ml"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_marginBottom="@dimen/player_state_title_mb"
                        style="@style/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player_x" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/cup.full" />

                        <ImageView
                            style="@style/cup" />

                        <ImageView
                            style="@style/cup" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_marginBottom="@dimen/player_state_title_mb"
                        style="@style/normal"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player_0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/cup" />

                        <ImageView
                            style="@style/cup.full" />

                        <ImageView
                            style="@style/cup.full" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/quit_mt"
                style="@style/btn">
                <TextView
                    style="@style/medium_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quit" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>